--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "OER-Buch"
+title: "OER-Leitfaden"
 remote_theme: pmarsceill/just-the-docs
 color_scheme: nil
 search_enabled: true
@@ -6,4 +6,4 @@ search_enabled: true
 # Aux links for the upper right navigation
 aux_links:
   "OER-Buchvorlage auf GitHub":
-    - "//github.com/budumlu/OER-Buch-Vorlage"
+    - "//github.com/budumlu/OER-Leitfaden"
