--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ search_enabled: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "OER-Buchvorlage auf GitHub":
+  "OER-Leitfaden auf GitHub":
     - "//github.com/budumlu/OER-Leitfaden"
